feat: minified texts

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#317EFB"/>
     <script>
     // https://github.com/filamentgroup/loadCSS
     ! function(e) {
@@ -31,9 +32,10 @@
     }
     </style>
     <script>
-    loadCSS("css/styles.css");
+    loadCSS("css/all.css");
     </script>
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+    <link rel="manifest" href="/manifest.webmanifest">
     <title>Restaurant Reviews</title>
 </head>
 
@@ -70,6 +72,7 @@
     <script type="application/javascript" charset="utf-8" src="js/db/dbhelper.js"></script>
     <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9xwSuL6xsPdR9eo39tiZxz84sDPH7fAc&v=3.31&libraries=places&callback=initMap"></script>
+    <noscript>Your browser does not support JavaScript!</noscript>
 </body>
 
 </html>
