--- a/app/restaurant.html
+++ b/app/restaurant.html
@@ -49,7 +49,7 @@
     <header>
         <!-- Beginning nav -->
         <nav class="info-header">
-            <h1><a href="/">Restaurant Reviews</a></h1>
+            <h1><a href="/">Restaurant Info</a></h1>
         </nav>
         <!-- End nav -->
     </header>
